# lego-racers

./: .gitignore  CMakeLists.txt  Makefile  configure  diff_settings.py  first_diff.py  fix.sh  legoracers.ld  legoracers.yaml  pyproject.toml  requirements.txt  setup  splat_api.py  splat_n64.py  symbol_addrs.txt  symbols_n64.py  undefined_funcs_auto.txt  undefined_syms.txt  undefined_syms_auto.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  c-cpp.yml  format.yml
asm/: 1000.s  __builtin_delete.s  alloc.s  header.s  libc.s  snmain.s
asm/data/: libc.rdata.s  main_030.rdata.s
asm/libaudio/: 0x147A0.s  0x15DA0.s  0x15F50.s  0x15FE0.s  n_auxbux.s  n_drverNew.s  n_env.s  n_mainbus.s  n_resample.s  n_save.s  n_synaddplayer.s  n_synallocvoice.s  n_syncallocfx.s  n_synthesiser.s  x147A0.s
asm/libmus/: aud_dma.s  aud_samples.s  aud_sched.s  aud_thread.s  lib_memory.s  player.s  player_fx.s
asm/libsn/: divdi3.s  udivdi3.s  umoddi3.s
asm/libultra/: 16C20.s  16CC0.s  16E60.s  17220.s  172B0.s  17420.s  17590.s  17680.s  17730.s  17870.s  17910.s  17930.s  18160.s  18C70.s  18D80.s  19A50.s  19E70.s  1AA10.s  1AB90.s  1ABD0.s  1AC20.s  1AC60.s  1B2A0.s  1B2B0.s  1B350.s  1B480.s  1B500.s  1B530.s  1B7B0.s  1BAC0.s  1BB20.s  1BB30.s  1BF00.s  1C450.s  1C4E0.s  1CF10.s  1D160.s  1D320.s  1DDA0.s  1DDD0.s  (+60 more)
asm/main/: 010.s  020.s  030.s  040.s  050.s  060.s  070.s  080.s  090.s  100.s  110.s  120.s  130.s  140.s
asm/menu/: 010.s  020.s  030.s  040.s  050.s  060.s  (+92 more)
include/: common.h  include_asm.h  labels.inc  scheduler.h
src/: libc.c
(+669 files in other folders)
