[project]
name = "lego-racers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "rich>=0.1.0",
    "splat64[mips]>=0.27.0",
    "types-pyyaml>=6.0.12.20240808",
]


[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/ninja_syntax.py    # exclude a file named foo.py in the root of the project
)
'''
