[project]
name = "lego-racers"
version = "0.1.0"
requires-python = ">=3.12"


[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/ninja_syntax.py|     # exclude ninja syntax
  ^/tools/modern-asn64/  # exclude modern-asn64 directory
)
'''
force-exclude = false
include = '(\.pyi?$|configure$)'  # Include .py, .pyi, and the configure file

[tool.ruff]
line-length = 120
extend-exclude = [
    "ninja_syntax.py",    # exclude ninja syntax
    "tools/modern-asn64/*"
]
extend-include = ["configure"]  # Explicitly include the configure file
